Added the banner.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Gem Prince's Website</title>
     <link rel="stylesheet" href="style.css">
   </head>
+  <header>
+    <img src="assets/images/largeBanner.png">
+  </header>
   <body>
     <h1>Hello, world!</h1>
     <div>
