--- a/index.html
+++ b/index.html
@@ -3,38 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Shadowed Section</title>
-    <style>
-        /* Brown Background */
-        .background {
-            background-color: #5a3e2f; /* Brown color */
-            height: 100vh; /* Full screen height */
-            position: relative; /* To allow layering of the shadow section */
-        }
 
-        /* Lighter Content Section */
-        .content-section {
-            background-color: #f8f3e8; /* Light color */
-            width: 80%; /* Adjust width as needed */
-            margin: 0 auto; /* Center horizontally */
-            padding: 20px;
-            border-radius: 10px; /* Rounded corners */
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Drop shadow */
-            position: absolute; /* Overlap brown background */
-            top: 50%; /* Adjust vertical position */
-            left: 50%; /* Center horizontally */
-            transform: translate(-50%, -50%); /* Center perfectly */
-        }
-
-        /* Optional: Content inside */
-        .content-section h2 {
-            text-align: center;
-            color: #333;
-        }
-        .content-section p {
-            color: #666;
-        }
-    </style>
 </head>
 <body>
     <div class="background">
@@ -45,4 +16,6 @@
         </div>
     </div>
 </body>
+<script src="js/index.js"></script>
+
 </html>
