Creating the site structure.

--- a/index.html
+++ b/index.html
@@ -3,19 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Shadowed Section</title>
-
+    <title>Gem Prince</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="background">
-        <!-- Lighter Content Section -->
-        <div class="content-section">
-            <h2>Fresh Releases</h2>
-            <p>Here is your lighter section with a drop shadow that overlaps the brown background!</p>
+    <header class="header">
+        <div class="logo">
+            <h1>GEM <span>PRINCE</span></h1>
         </div>
-    </div>
+        <nav class="nav">
+            <a href="#">+NAV</a>
+            <a href="#">+SHARE</a>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <img src="hero-image.jpg" alt="Hero Image" class="hero-img">
+            <h2>FRESH RELEASES</h2>
+        </section>
+        <section class="content">
+            <div class="coming-soon">
+                <h3>Coming Soon</h3>
+                <img src="books-image.jpg" alt="Books">
+                <p><strong>Women’s Day Read</strong></p>
+                <p>In 20 weeks, 10 hours, 48 minutes, 10 seconds</p>
+            </div>
+            <div class="updates">
+                <h3>Website Updates</h3>
+                <p>Page updated November 20, 2024</p>
+                <p>Page: FAQs > Contacting, Contracting, Inviting, Interviewing, or Mailing Gemma</p>
+            </div>
+            <div class="journal">
+                <h3>Journal</h3>
+                <p><em>December 30, 2024</em></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                <a href="#">[more]</a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>Email Site Comments | Sitemap</p>
+        <p>&copy; Melanie Designs</p>
+    </footer>
+    <script src="scripts.js"></script>
 </body>
-<script src="js/index.js"></script>
-
 </html>
