Created the header.

--- a/index.html
+++ b/index.html
@@ -7,18 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Gem Prince header -->
     <header class="header">
-        <div class="logo">
-            <h1>GEM <span>PRINCE</span></h1>
-        </div>
-        <nav class="nav">
-            <a href="#">+NAV</a>
-            <a href="#">+SHARE</a>
-        </nav>
+          <img src="assets/images/totalbanner.png">
     </header>
     <main>
         <section class="hero">
-            <img src="hero-image.jpg" alt="Hero Image" class="hero-img">
+            <img src="TEST.png" alt="Hero Image" class="hero-img">
             <h2>FRESH RELEASES</h2>
         </section>
         <section class="content">
@@ -42,8 +37,8 @@
         </section>
     </main>
     <footer>
-        <p>Email Site Comments | Sitemap</p>
-        <p>&copy; Melanie Designs</p>
+          <p class="left">Email Site Comments | Sitemap</p>
+          <p class="right">&copy; Melanie Designs</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
