--- a/index.html
+++ b/index.html
@@ -3,43 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gem Prince</title>
+    <title>Author Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Gem Prince header -->
     <header class="header">
-          <img src="assets/images/totalbanner.png">
+        <div class="logo">
+            <img src="assets/images/logo.png" width="250">
+        </div>
+        <nav class="nav">
+            <a href="#">+NAV</a>
+            <a href="#">+SHARE</a>
+        </nav>
     </header>
-    <main>
-        <section class="hero">
-            <img src="TEST.png" alt="Hero Image" class="hero-img">
-            <h2>FRESH RELEASES</h2>
-        </section>
-        <section class="content">
-            <div class="coming-soon">
-                <h3>Coming Soon</h3>
-                <img src="books-image.jpg" alt="Books">
-                <p><strong>Women’s Day Read</strong></p>
-                <p>In 20 weeks, 10 hours, 48 minutes, 10 seconds</p>
-            </div>
-            <div class="updates">
-                <h3>Website Updates</h3>
-                <p>Page updated November 20, 2024</p>
-                <p>Page: FAQs > Contacting, Contracting, Inviting, Interviewing, or Mailing Gemma</p>
-            </div>
-            <div class="journal">
-                <h3>Journal</h3>
-                <p><em>December 30, 2024</em></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                <a href="#">[more]</a>
-            </div>
-        </section>
-    </main>
-    <footer>
-          <p class="left">Email Site Comments | Sitemap</p>
-          <p class="right">&copy; Melanie Designs</p>
-    </footer>
-    <script src="scripts.js"></script>
+
 </body>
 </html>
+
