--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <header class="header">
         <div class="logo">
             <img src="assets/images/logo.png" width="400">
+            <div>
+                <div class="main box">
+
+                </div>
+            </div>
         </div>
         <nav class="nav">
             <a href="#">+NAV</a>
