--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="logo">
             <img src="assets/images/logo.png" width="400">
             <div>
-                <div class="main box">
+                <div class="mainBox">
 
                 </div>
             </div>
