--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <header class="header">
         <div class="logo">
             <img src="assets/images/logo.png" width="400">
-            <div>
-                <div class="mainBox">
-
-                </div>
-            </div>
         </div>
         <nav class="nav">
             <a href="#">+NAV</a>
             <a href="#">+SHARE</a>
         </nav>
     </header>
+    <div id="hero">
+        Orange section visible!
+    </div>
 
+    <div id="mainBox">
+        Orange section visible!
+    </div>
+    
 </body>
 </html>
 
