Updating html sections.

--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
         <nav class="nav">
             <a href="#">+NAV</a>
             <a href="#">+SHARE</a>
+            <img src="assets/images/socials.png" width="100">
         </nav>
     </header>
-    <div id="hero">
-        Orange section visible!
-    </div>
-
     <div id="mainBox">
-        Orange section visible!
+        <div id="hero">
+            <img src="assets/images/largeBanner.png" width="1200">
+        </div>
+        <div id="content">
+            Orange shadowed section visible!
+        </div>
     </div>
-    
 </body>
+<footer>
+    j;liuhboiuygi7tdutyrx
+</footer>
 </html>
 
