--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
         </div>
         <div id="content">
             Orange shadowed section visible!
+            <div>
+                
+            </div>
         </div>
     </div>
-</body>
+</body>  
 <footer>
     j;liuhboiuygi7tdutyrx
 </footer>
